from abc import ABC

__all__ = ['AnyMatrix']


class AnyMatrix(ABC):
    pass
